--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cSpell.words": [
         "Menlo",
         "Roboto"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
