--- a/Atividade2/package.json
+++ b/Atividade2/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native-stack": "^6.5.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-gesture-handler": "^2.3.1",
+    "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^4.1.2",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0"
