--- a/Atividade2/ios/Podfile
+++ b/Atividade2/ios/Podfile
@@ -18,6 +18,8 @@ target 'Atividade2' do
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
   target 'Atividade2Tests' do
     inherit! :complete
     # Pods for testing
